Fix bug with generating a3 figures

--- a/a3/a3_plot.ipynb
+++ b/a3/a3_plot.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d411b77d",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
     "    wspace=0.1,\n",
     "    # hspace=4,\n",
     ")\n",
-    "plt.savefig(\"test_runtimes.pdf\", bbox_inches=\"tight\")\n",
+    "plt.savefig(\"figure/test_runtimes.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
